# jobrunner

./: .dockerignore  .env.example  .gitignore  dagster.yaml  pyproject.toml
docker/: Dockerfile  (+7 more)
modules/agent_tools/: pyproject.toml
modules/hub/: GUIDE.md  agent_catalog.template.yml  catalog.template.yml  model_catalog.template.yml  pyproject.toml
modules/hub/app/: main.py  router.py
modules/hub/app/agents/agent_executions/: enum.py  models.py  repos.py  schemas.py  services.py
modules/hub/app/agents/agent_executions/api/: __init__.py  v1.py
modules/hub/app/agents/agent_executions/usecases/: crud.py
modules/hub/app/agents/agent_mcps/: filters.py  models.py  repos.py  schemas.py  services.py
modules/hub/app/agents/agent_mcps/api/: __init__.py  v1.py
modules/hub/app/agents/agent_mcps/usecases/: crud.py
modules/hub/app/agents/agent_skills/: filters.py  models.py  repos.py  schemas.py  services.py
modules/hub/app/agents/agent_skills/api/: __init__.py  v1.py
modules/hub/app/agents/agent_skills/usecases/: crud.py
modules/hub/app/agents/ai_model_aliases/: models.py  repos.py  schemas.py  services.py
modules/hub/app/agents/ai_model_aliases/api/: __init__.py  v1.py
modules/hub/app/agents/ai_model_aliases/usecases/: crud.py
modules/hub/app/agents/ai_model_catalogs/: models.py  repos.py  schemas.py  services.py
modules/hub/app/agents/ai_model_catalogs/api/: v1.py
modules/hub/app/agents/ai_model_catalogs/usecases/: crud.py
modules/hub/app/agents/ai_model_groups/: models.py  repos.py  schemas.py  services.py
modules/hub/app/agents/ai_models/: models.py  repos.py  schemas.py  services.py
modules/hub/app/agents/configured_agents/: models.py  repos.py  schemas.py  services.py
modules/hub/app/features/tasks/: models.py  repos.py  schemas.py  services.py
modules/hub/app/gateways/chat_messages/: models.py  repos.py  schemas.py  services.py
modules/hub/app/gateways/conversations/: models.py  repos.py  schemas.py  services.py
modules/hub/app/gateways/routing_logs/: models.py  repos.py  schemas.py  services.py
modules/hub/app/gateways/user_messages/: models.py  repos.py  schemas.py  services.py
modules/hub/app/platform/workspaces/: models.py  repos.py  schemas.py  services.py
modules/hub/app/tasks/task_histories/: models.py  repos.py  schemas.py  services.py
modules/hub/app/tasks/task_tags/: models.py  repos.py  schemas.py  services.py
modules/hub/app/tasks/tasks/: enum.py  filters.py  models.py  repos.py  schemas.py  services.py
modules/hub/migrations/: env.py
modules/hub/migrations/versions/: 20260209_204840_6a2cc599ba35_init.py  20260210_165659_055c325322e4_init.py  20260210_215818_f749177d11dd_init.py  20260212_214659_9c12ccc6b3a6_init.py
modules/hub/tests/: pytest.ini
modules/hub/tests/fixtures/: data_factory.py
modules/hub/tests/test_app/: conftest.py
modules/hub/tests/test_app/e2e/: conftest.py  test_health.py
modules/hub/tests/test_app/fixtures/: __init__.py  auth.py  clients.py  db.py
modules/hub/tests/test_app/integrate/: conftest.py
modules/hub/tests/test_app/unit/: conftest.py
modules/hub/tests/test_app/utils/: __init__.py  assertions.py
modules/workflow/: README.md  pyproject.toml  test.py
(+218 files in other folders)
