[project]
name = "jobrunner"
version = "0.1.0"
description = "JobRunner - Human-in-the-Loop Automation Platform"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv]
dev-dependencies = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.15.0"]

[tool.uv.workspace]
members = ["modules/agent-tools", "modules/hub", "modules/workflow"]

[tool.rye.workspace]
members = ["modules/agent-tools", "modules/hub", "modules/workflow"]

[tool.ruff]
exclude = [".git", ".venv", "migrations"]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["F403", "E402"]
"__init__.py" = ["F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "basic"
extraPaths = ["./modules/agent-tools", "./modules/hub", "./modules/workflow"]
