[project]
name = "jr-agent-tools"
version = "0.1.0"
description = "JobRunner Agent Tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
]

[project.scripts]
jr = "cli.main:cli"

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.15.0"]

[tool.pytest.ini_options]
log_level = "INFO"
pythonpath = "."
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
extraPaths = ["."]
