[project]
name = "jr-workflow"
version = "0.1.0"
description = "JobRunner Workflow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster==1.9.14",
    "dagster-postgres==0.25.14",
    "dagster-webserver==1.9.14",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.15.0"]

[tool.pytest.ini_options]
log_level = "INFO"
pythonpath = "."
testpaths = "tests"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
